LDEV-4696 Converted Hibernate to Annotations